--- a/deep-learning.html
+++ b/deep-learning.html
@@ -86,7 +86,7 @@
 <p>Oct 15, 2019 ... As either the Deep Learning Engineer or ML Research Engineer, you will be at 
 the center of our core mission, building state of the art technologies. You will be?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698129226-internship-object-detection-with-deep-learning'>Bosch Group Internship Object Detection with Deep Learning | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698129226-internship-object-detection-with-deep-learning'>Bosch Group Internship Object Detection with Deep Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -138,11 +138,11 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4480804002'>Job Application for Deep Learning Engineer ? Samsung Ads AI Team at Samsung Research America</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4480804002'>Job Application for Deep Learning Engineer ? Samsung Ads AI Team at Samsung Research America</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/oVCmbfwO'>Samsung Semiconductor, Inc. Careers - Research Intern, Deep Learning Platform</a></h5> 
+<h5><a href='https://jobs.jobvite.com/samsungssi/job/oVCmbfwO'>Samsung Semiconductor, Inc. Careers - Research Intern, Deep Learning Platform</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -284,7 +284,7 @@ with a?...</p>
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/wandb/3d5776dc-328e-4b31-ace5-ea22abb144ab'>Weights & Biases - Deep Learning Instructor</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wandb/3d5776dc-328e-4b31-ace5-ea22abb144ab'>Weights & Biases - Deep Learning Instructor</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
@@ -292,7 +292,7 @@ with a?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/oDY4afwz'>Samsung Semiconductor, Inc. Careers - Deep Learning Computer Vision Researcher/ Scientist Intern</a></h5> 
+<h5><a href='https://jobs.jobvite.com/samsungssi/job/oDY4afwz'>Samsung Semiconductor, Inc. Careers - Deep Learning Computer Vision Researcher/ Scientist Intern</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-09-26</p>
 <hr/>
@@ -300,7 +300,7 @@ with a?...</p>
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-09-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIdaVfwK&k=Job&j=oA4cafwK&__jvst=Employee&__jvsd=s8vU5hwo&__jvsc=Twitter&bid=ns9XRLwF'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Hardware Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIdaVfwK&k=Job&j=oA4cafwK&__jvst=Employee&__jvsd=s8vU5hwo&__jvsc=Twitter&bid=ns9XRLwF'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Hardware Architect</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-09-26</p>
 <hr/>
@@ -381,7 +381,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/instabase/jobs/4428023002'>Job Application for Senior Deep Learning Engineer at Instabase</a></h5> 
+<h5><a href='https://boards.greenhouse.io/instabase/jobs/4428023002'>Job Application for Senior Deep Learning Engineer at Instabase</a></h5> 
 <p><span class="badge badge-light">San Francisco, CANew York, NYBoston, MA</span></p>
 <p>Posted on: 2019-09-14</p>
 <hr/>
@@ -410,7 +410,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aquabyte/cdf45de2-9d6f-4ef8-9634-ed305effe990'>Aquabyte - Senior Deep Learning Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/aquabyte/cdf45de2-9d6f-4ef8-9634-ed305effe990'>Aquabyte - Senior Deep Learning Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -418,7 +418,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/C09F877A45'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
+<h5><a href='https://crisalix.workable.com/j/C09F877A45'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
@@ -460,7 +460,7 @@ from?...</p>
 Vision / Computational geometry. GIT version control (good knowledge). English
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/2E94E69E63'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS ...</a></h5> 
+<h5><a href='https://crisalix.workable.com/j/2E94E69E63'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 18, 2019 ... Apply online for the job of Deep Learning Engineer with Strong iOS Development 
 Skills - Barcelona at Crisalix.</p>
@@ -477,12 +477,12 @@ Skills - Barcelona at Crisalix.</p>
 <p><span class="badge badge-light">St. Louis, Missouri  Seattle, Washington  Chicago, Illinois</span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sertis/jobs/4017140002'>Job Application for Deep Learning Researcher (Computer Vision ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sertis/jobs/4017140002'>Job Application for Deep Learning Researcher (Computer Vision ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... You will be responsible for the research and development of cutting-edge AI and 
 machine learning algorithms, playing with state of the art deep learning models?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://controlexpert.softgarden.io/job/3788087/Master-s-Student-gn-Active-Deep-Learning-for-Image-Recognition?jobDbPVId=12793399&amp;l=de'>Master's Student (gn) Active Deep Learning for Image Recognition</a></h5> 
+<h5><a href='https://controlexpert.softgarden.io/job/3788087/Master-s-Student-gn-Active-Deep-Learning-for-Image-Recognition?jobDbPVId=12793399&amp;l=de'>Master's Student (gn) Active Deep Learning for Image Recognition</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
